2008-06-04  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs (EncapsulateField):
	Add params for visibility and generateSetter.
	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs (EncapsulateField):
	Update.
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs (EncapsulateField):
	Track api changes.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs: Added missing
	  null check.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/WorkspaceItem.cs,
	  MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/SolutionItem.cs,
	  MonoDevelop.Projects/DotNetProject.cs,
	  MonoDevelop.Projects/ProjectServiceExtension.cs: Added method for
	  checking if a solution item can be executed for the given execution
	  context.
	* MonoDevelop.Projects/Solution.cs,
	  MonoDevelop.Projects/ExecutionContext.cs,
	  MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs,
	  MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs,
	  MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs: Added support
	  for projects with multiple startup items.

2008-06-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ReferenceEntry.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/ClassEntry.cs,
	  MonoDevelop.Projects.Dom/Tag.cs,
	  MonoDevelop.Projects.Dom/NamespaceEntry.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/IReturnType.cs,
	  MonoDevelop.Projects.Dom/IType.cs,
	  MonoDevelop.Projects.Dom/TypeUpdateInformation.cs,
	  MonoDevelop.Projects.Dom/FileEntry.cs, MonoDevelop.Projects.mdp,
	  MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Worked on
	  dom persistence.

2008-06-02  Lluis Sanchez Gual <lluis@novell.com> 

	* md1format.xml: Add missing field.
