@@ -1,3 +1,9 @@
+2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Projects.Formats.MD1/CmbxFileFormat.cs,
+	  MonoDevelop.Projects.Formats.MD1/CombineStartupMode.cs: Properly
+	  implement start mode loading and writing.
+
 2008-06-04  Ankit Jain  <jankit@novell.com>
 
 	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs (EncapsulateField):
